--- a/public/assets/site/css/home.css
+++ b/public/assets/site/css/home.css
@@ -1,3 +1,7 @@
+#inicio {
+  padding-top: 4.5rem;
+}
+
 .image-minicurso, .image-palestra {
     width: 100%;
     height: 20rem;
@@ -7,8 +11,17 @@
     border-radius: .5rem;
 }
 
+.single_advisor {
+    height: auto;
+}
+
 .image-palestra {
-    height: 25rem;
+    height: 27rem;
+}
+
+.nav-brand img {
+    max-height: 60px;
+    margin-top: -5px;
 }
 
 .mini-curso-descript, .palestra-descript {
@@ -102,7 +115,6 @@
     padding: 20px 0;
 }
 
-
 .left-menu {
     transition: .5s;
     z-index: 999;
@@ -174,4 +186,24 @@
 
 .left-menu.closed .left-button i {
     transform: translate(-50%, -50%) rotate(0);
+}
+
+.gallery-image {
+    max-height: 300px !important;
+}
+
+@media (min-width: 0px) {
+    .gallery-image {
+        width: 50% !important;
+    }
+}
+
+@media (min-width: 992px) {
+    .gallery-image {
+        width: 25% !important;
+    }
+
+    .vgs__container {
+        margin: 4.5rem auto 0 !important;
+    }
 }
