--- a/public/assets/site/css/left-bar.css
+++ b/public/assets/site/css/left-bar.css
@@ -10,7 +10,6 @@
     box-shadow: 0 .5rem .5rem rgba(0, 0, 0, 0.3);
 }
 
-
 .left-menu .internal h2 {
     color: #666;
     text-transform: initial;
@@ -152,4 +151,47 @@
     background-attachment: fixed;
     background-size: cover !important;
     margin: 1rem auto 2rem auto;
+    position: relative;
+    overflow: hidden;
+}
+
+#banner_input_label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .4));
+    opacity: 0;
+    transition: .3s;
+    border-radius: .5rem;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+#banner_input_label::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../img/core-img/photo-cam.png');
+  background-size: 35%;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: .8;
+  transition: .5s;
+  transition-delay: .4s;
+}
+
+#banner_input_label:hover {
+    opacity: 1;
+}
+
+#banner_input {
+    display: none;
 }
