Adicionado novas funções ao cadastro de user (Não mandar para o server)

--- a/public/assets/site/css/left-bar.css
+++ b/public/assets/site/css/left-bar.css
@@ -20,6 +20,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+.left-menu a {
+  text-transform: initial !important;
+}
+
 .left-menu .left-button {
     right: -2rem !important;
     position: absolute !important;
