--- a/public/assets/site/css/home.css
+++ b/public/assets/site/css/home.css
@@ -186,6 +186,7 @@
 
 .minicurso-card .btn {
     color: #f6f6f6 !important;
+    text-transform: initial;
 }
 
 .minicurso-card .news-headline {
@@ -211,4 +212,28 @@
     border: 1px solid rgba(0, 0, 0, .2);
     border-radius: .5rem;
     box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .25);
+}
+.loadingAvatar {
+    position: absolute;
+    background-color: rgba(0,0,0,.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: .5s;
+}
+
+.loadingAvatar i {
+    color: rgba(255,255,255, .85);
+    font-size: 40px;
+    animation: animateAvatar linear 1.5s infinite;
+}
+
+@keyframes animateAvatar {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
