--- a/public/assets/site/css/home.css
+++ b/public/assets/site/css/home.css
@@ -213,9 +213,10 @@
     border-radius: .5rem;
     box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .25);
 }
+
 .loadingAvatar {
     position: absolute;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0, 0, 0, .5);
     top: 0;
     left: 0;
     width: 100%;
@@ -224,16 +225,30 @@
 }
 
 .loadingAvatar i {
-    color: rgba(255,255,255, .85);
+    color: rgba(255, 255, 255, .85);
     font-size: 40px;
     animation: animateAvatar linear 1.5s infinite;
 }
 
 @keyframes animateAvatar {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.note-donation {
+    font-size: 0.8rem !important;
+    font-weight: 600;
+}
+
+.location-map {
+    width: 100%;
+    height: 29vh;
+    border-radius: .5rem;
+    border: 2px solid #c4c4c4;
+    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.15);
 }
