--- a/public/assets/site/css/home.css
+++ b/public/assets/site/css/home.css
@@ -69,7 +69,6 @@
     border-radius: 5rem;
     right: -3.25rem !important;
     left: auto !important;
-    /* box-shadow: 0 5px 50px 0 rgba(0, 0, 0, 0.15); */
 }
 
 .dropdown-menu li {
@@ -188,6 +187,7 @@
 .minicurso-card .news-headline {
     height: 3.5rem;
     overflow: hidden;
+    text-transform: none !important;
 }
 
 .minicurso-card .single-item {
@@ -243,7 +243,7 @@
 
 .location-map {
     width: 100%;
-    height: 29vh;
+    height: 50vh;
     border-radius: .5rem;
     border: 2px solid #c4c4c4;
     box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.15);
